Fix image stretching

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ button {
 .media-obj img{
     height: 200px;
     width: 200px;
+    object-fit: cover;
 }
 
 .media-obj {
